--- a/Tasks/03-task.html
+++ b/Tasks/03-task.html
@@ -43,6 +43,14 @@
     Найдите на странице все элементы li, которые находятся в ul с классом border 
     и добавьте для них сплошную красную рамку толщиной в 1px
     */
+
+    let lists = document.getElementsByClassName("border");
+    if(document.getElementsByTagName("p")) {
+list.style.border = "";
+    }
+        for (const list of lists) {
+            list.style.border = "1px solid red";
+        }
 </script>
 
 </html>
