--- a/Tasks/01-task.html
+++ b/Tasks/01-task.html
@@ -42,6 +42,11 @@
     Задание:
     Найдите на странице все параграфы с классом border и добавьте для них сплошную красную рамку толщиной в 1px
     */
+
+    let listItems = document.querySelectorAll(".border");
+    for (const item of listItems) {
+        item.style.border = "1px solid red";
+    }
 </script>
 
 </html>
